--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
         <h1>SassyLists <small>2.2.4</small></h1>
         <p>SassyLists is a toolbox providing you all the functions you need to manipulate your <a href="http://sass-lang.com">Sass</a> lists.</p>
-        <p><a class="btn btn-info" href="/documentation/">Read documentation</a> <a class="btn btn-warning" href="https://github.com/Team-Sass/SassyLists/blob/master/CHANGELOG.md">Read changelog</a></p>
+        <p><a class="btn btn-info" href="/SassyLists/documentation/">Read documentation</a> <a class="btn btn-warning" href="https://github.com/Team-Sass/SassyLists/blob/master/CHANGELOG.md">Read changelog</a></p>
     </div>
 </div>
 
